--- a/scss/input.scss
+++ b/scss/input.scss
@@ -657,7 +657,8 @@ border-color: $goldenrod;
     
     .project {
         background: $special-color;
-        padding: 5px;
+        color: $medium-light-color;
+        padding: 15px;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         cursor: pointer;
